# pre-commit-shellcheck

./: .gitignore  .pre-commit-hooks.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: build.yaml  ci.yaml  lint.yaml
src/pre_commit_shellcheck/: __init__.py  main.py
